@@ -21,68 +21,25 @@
 #define CPPDEVTK_BASE_TIME_UTILS_HPP_INCLUDED_
 
 
-#if (defined(__APPLE__) && defined(__MACH__))
-#	undef _DARWIN_FEATURE_CLOCK_GETTIME
-#	define _DARWIN_FEATURE_CLOCK_GETTIME 0
-#endif
 #include <cppdevtk/base/config.hpp>
 
-
-#if (CPPDEVTK_PLATFORM_MACOSX)
-#include <time.h>
-#endif
-
-#if (CPPDEVTK_HAVE_PTHREADS)
 #include <ctime>
-#endif
-
-
-#if (CPPDEVTK_PLATFORM_MACOSX)
-
-
-typedef enum cppdevtk_clockid {
-	cid_realtime = 0
-} cppdevtk_clockid_t;
-
-#ifdef CLOCK_REALTIME
-#	error "CLOCK_REALTIME defined; please make sure this header is included before ctime/time.h"
-#endif
-#define CLOCK_REALTIME cid_realtime
-
-
-#ifdef __cplusplus
-extern "C" {
-#endif
-
-
-int cppdevtk_clock_gettime(cppdevtk_clockid_t clk_id, struct timespec* tp);
-
-#define clock_gettime(clk_id, tp) cppdevtk_clock_gettime((clk_id), (tp))
-
-
-#ifdef __cplusplus
-}
-#endif
-
-
-#endif	// CPPDEVTK_PLATFORM_MACOSX
 
 
 namespace cppdevtk {
 namespace base {
-namespace detail {
+
+
+CPPDEVTK_BASE_API ::std::time_t GetCurrentTime();
 
 
 #if (CPPDEVTK_HAVE_PTHREADS)
 
-
-timespec RelTimeToAbsTime(int relTime);
-
+CPPDEVTK_BASE_API timespec RelTimeToAbsTime(int relTime);
 
 #endif
 
 
-}	// namespace detail
 }	// namespace base
 }	// namespace cppdevtk
 
