@@ -25,6 +25,7 @@
 #include <cppdevtk/base/system_exception.hpp>
 #include <cppdevtk/base/lock_exception.hpp>
 #include <cppdevtk/base/logger.hpp>
+#include <cppdevtk/base/time_utils.hpp>
 
 #include <cstddef>
 
@@ -93,11 +94,7 @@ bool TimedMutex::TryLockFor(int relTime) {
 }
 
 bool TimedMutex::TryLockUntil(::std::time_t absTime) {
-	const time_t kCurrTime = time(NULL);
-	if (kCurrTime == (time_t)-1) {
-		throw CPPDEVTK_LOCK_EXCEPTION_W_EC_WA(GetLastSystemErrorCode(), "failed to get time");
-	}
-	
+	const time_t kCurrTime = GetCurrentTime();
 	const time_t kSeconds = difftime(absTime, kCurrTime);
 	
 	return (kSeconds <= 0) ? TryLock() : mutex_.tryLock(kSeconds * 1000);
@@ -129,11 +126,7 @@ bool RecursiveTimedMutex::TryLockFor(int relTime) {
 }
 
 bool RecursiveTimedMutex::TryLockUntil(::std::time_t absTime) {
-	const time_t kCurrTime = time(NULL);
-	if (kCurrTime == (time_t)-1) {
-		throw CPPDEVTK_LOCK_EXCEPTION_W_EC_WA(GetLastSystemErrorCode(), "failed to get time");
-	}
-	
+	const time_t kCurrTime = GetCurrentTime();
 	const time_t kSeconds = difftime(absTime, kCurrTime);
 	
 	return (kSeconds <= 0) ? TryLock() : mutex_.tryLock(kSeconds * 1000);
