@@ -17,7 +17,7 @@
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-#include "time_utils.hpp"
+#include "time_utils.h"	// must be included first!
 #include "pthread_ext.h"
 
 
