@@ -9,6 +9,7 @@ Version 1.0.4.1:
 	- added more std exception classes equivalents
 	- treat warning "not all control paths return a value" as error
 	- uniform error reporting/handling in synchronization primitives
+	- added time utils
 - Fixed bugs:
 	- fixed internal pthread_mutex_timedlock(): absTime instead of relTime
 
